<resources>
    <string name="app_name">Calculadora</string>
    <string name="ce">CE</string>
    <string name="porcentaje">%</string>
    <string name="solucion">0</string>
    <string name="E">E</string>
    <string name="Borrar"><![CDATA[<-]]></string>
    <string name="N7">7</string>
    <string name="N8">8</string>
    <string name="N9">9</string>
    <string name="SX">X</string>
    <string name="N4">4</string>
    <string name="N5">5</string>
    <string name="N6">6</string>
    <string name="SMe">-</string>
    <string name="N1">1</string>
    <string name="N2">2</string>
    <string name="N3">3</string>
    <string name="SMa">+</string>
    <string name="SMM">+/-</string>
    <string name="N0">0</string>
    <string name="SC">,</string>
    <string name="SR">=</string>
</resources>
